# hisse-senetleri-web-scrapping

./: .gitignore  README.md  app.py  app2.py  app3.py  hisse_senedi.json  hisse_özellikler.json  pyproject.toml  requirements.text  run_script.ps1  selenium.json
