[tool.poetry]
name = "hisse-senedi"
version = "0.1.0"
description = "mynet sayfasındaki hisselerin bilgilerini webscrapingle çekme"
authors = ["haticenurakdag <115037918+haticenurakdag@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.11.2"
webdriver-manager = "^4.0.0"
mypy = "^1.5.1"
service = "^0.6.0"
pylint = "^2.17.5"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
